--- a/src/Components/Footer/footer.css
+++ b/src/Components/Footer/footer.css
@@ -12,3 +12,11 @@ footer ul {
     font-size: 14px;
     color: rgba(0, 0, 0, 0.603);
   }
+  footer {
+    padding: 0 50px;
+  }
+  @media(max-width: 700px) {
+    footer {
+      padding: 0;
+    }
+  }
