--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -8,3 +8,9 @@ header ul li a {
   header ul li:last-child a:hover {
     text-decoration: none !important;
   }
+  @media(max-width: 700px){
+    header ul li a {
+      padding: 0 10px;
+      color: black;
+    }
+  }
